# aoc-2025

./: LICENSE  aoc.cabal  flake.nix
app/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs
src/Advent/: Prelude.hs
src/Advent/Solution/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs
src/Data/: DivMod.hs  Mod.hs  Nat.hs
