cabal-version: 3.0
name:          aoc
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matt Wittmann
maintainer:    mcwitt@gmail.com
build-type:    Simple

common default-language
  default-language: GHC2024

common warnings
  ghc-options: -Wall -Wno-missing-signatures -Wno-x-partial

library
  import:
    warnings,
    default-language

  hs-source-dirs:  src
  build-depends:
    , base        ^>=4.20.2.0
    , comonad
    , containers
    , MemoTrie
    , mtl
    , unordered-containers
    , monoidal-containers

  exposed-modules:
    AoC.Prelude
    Data.DivMod
    Data.Mod

common solution
  import:
    warnings,
    default-language

  build-depends:
    , aoc
    , base        ^>=4.20.2.0
    , comonad
    , containers
    , MemoTrie
    , mtl
    , monoidal-containers
    , unordered-containers
    , vector

  hs-source-dirs: app

executable d01
  import:  solution
  main-is: D01.hs

executable d02
  import:  solution
  main-is: D02.hs

executable d03
  import:  solution
  main-is: D03.hs

executable d04
  import:  solution
  main-is: D04.hs

executable d05
  import:  solution
  main-is: D05.hs

executable d06
  import:  solution
  main-is: D06.hs

executable d07
  import:  solution
  main-is: D07.hs
