cabal-version: 3.0
name:          aoc
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matt Wittmann
maintainer:    mcwitt@gmail.com
build-type:    Simple

common shared
  default-language: GHC2024
  ghc-options:      -Wall -Wno-missing-signatures -Wno-x-partial

library
  import:          shared
  hs-source-dirs:  src
  build-depends:
    , base                  ^>=4.20.2.0
    , comonad
    , containers
    , MemoTrie
    , monoidal-containers
    , mtl
    , unordered-containers
    , vector

  exposed-modules:
    Advent.Prelude
    Advent.Solution.D01
    Advent.Solution.D02
    Advent.Solution.D03
    Advent.Solution.D04
    Advent.Solution.D05
    Advent.Solution.D06
    Advent.Solution.D07
    Advent.Solution.D08
    Advent.Solution.D09
    Advent.Solution.D10
    Advent.Solution.D11
    Advent.Solution.D12
    Data.DivMod
    Data.Mod

common solution
  import:         shared
  build-depends:
    , aoc
    , base  ^>=4.20.2.0

  hs-source-dirs: app

executable d01
  import:  solution
  main-is: D01.hs

executable d02
  import:  solution
  main-is: D02.hs

executable d03
  import:  solution
  main-is: D03.hs

executable d04
  import:  solution
  main-is: D04.hs

executable d05
  import:  solution
  main-is: D05.hs

executable d06
  import:  solution
  main-is: D06.hs

executable d07
  import:  solution
  main-is: D07.hs

executable d08
  import:  solution
  main-is: D08.hs

executable d09
  import:  solution
  main-is: D09.hs

executable d10
  import:  solution
  main-is: D10.hs

executable d11
  import:  solution
  main-is: D11.hs

executable d12
  import:  solution
  main-is: D12.hs
